spring-cloud-kubernetes-integration-tests/spring-cloud-kubernetes-fabric8-client-simple-core/src/test/resources/simple-core-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-cloud-kubernetes-fabric8-client-simple-core-deployment
spec:
  selector:
    matchLabels:
      app: spring-cloud-kubernetes-fabric8-client-simple-core
  template:
    metadata:
      labels:
        app: spring-cloud-kubernetes-fabric8-client-simple-core
    spec:
      serviceAccountName: spring-cloud-kubernetes-serviceaccount
      containers:
        - name: spring-cloud-kubernetes-fabric8-client-simple-core
          image: docker.io/springcloud/spring-cloud-kubernetes-fabric8-client-simple-core
          imagePullPolicy: Never
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
          ports:
            - containerPort: 8080
