spring-cloud-kubernetes-integration-tests/spring-cloud-kubernetes-fabric8-client-simple-core/src/test/resources/simple-core-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: it-ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-cloud-kubernetes-fabric8-client-simple-core
                port:
                  number: 8080
