spring-cloud-kubernetes-integration-tests/spring-cloud-kubernetes-fabric8-client-simple-core/src/test/resources/simple-core-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-cloud-kubernetes-fabric8-client-simple-core
  name: spring-cloud-kubernetes-fabric8-client-simple-core
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: spring-cloud-kubernetes-fabric8-client-simple-core
  type: ClusterIP
